--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     </header>
 
     <main>
+        opk0ju98h89h87h
         <section id="hero">
             <div class="hero-content">
                 <h2>ยกระดับประสบการณ์คอมพิวเตอร์ของคุณ</h2>
