--- a/index.html
+++ b/index.html
@@ -18,8 +18,7 @@
         </nav>
     </header>
 
-    <main>
-        opk0ju98h89h87h
+    <main
         <section id="hero">
             <div class="hero-content">
                 <h2>ยกระดับประสบการณ์คอมพิวเตอร์ของคุณ</h2>
