--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         </nav>
     </header>
 
-    <main
+    <main>
         <section id="hero">
             <div class="hero-content">
                 <h2>ยกระดับประสบการณ์คอมพิวเตอร์ของคุณ</h2>
